bootstrap/argocd/overlays/main/core/agentgateway-httproute/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway
  namespace: platform-agent-gateway
  labels:
    app.kubernetes.io/name: agentgateway
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: platform-authentication
spec:
  parentRefs:
    - name: public-gateway
      namespace: kube-system
  hostnames:
    - "agentgateway.nutgraf.in"
  rules:
    - matches:
        - {}
      backendRefs:
        - name: agentgateway
          port: 3000
